Slow on Mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -922,7 +922,7 @@ h6 {
 .navbar-default .navbar-brand img {
   width: 160px;
   height: 40px;
-  margin-top: -15px;
+  margin-top: -10px;
 }
 .navbar-default .navbar-brand .logo-1 {
   display: none;
